pkl-core/src/test/files/LanguageSnippetTests/input/errors/moduleWithHighMinPklVersion.pkl
@ModuleInfo { minPklVersion = "99.9.9" }
open module moduleWithHighMinPklVersion

x = 1
